New visualisation added.

--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -30,13 +30,15 @@
    "outputs": [],
    "source": [
     "%%R\n",
-    "library(ggplot2)\n",
     "library(reshape2)\n",
-    "library(ggfortify)\n",
-    "library(ggplot2)\n",
     "library(cluster) \n",
     "library(factoextra)\n",
-    "library(NbClust)"
+    "library(NbClust)\n",
+    "\n",
+    "library(gridExtra)\n",
+    "library(grid)\n",
+    "library(ggplot2)\n",
+    "library(ggfortify)"
    ]
   },
   {
@@ -54,7 +56,8 @@
    "source": [
     "%%R\n",
     "exp_wd <- \"./Experiment_out/test2\"\n",
-    "sim_wd <- \"./Simulation_result/test2/Experiment_test2_1\""
+    "sim_wd <- \"./Simulation_result/test2/Experiment_test2_1\"\n",
+    "cbbPalette <- c(\"#EEEEEE\", \"#E69F00\", \"#56B4E9\", \"#009E73\", \"#F0E442\", \"#0072B2\", \"#D55E00\", \"#CC79A7\")"
    ]
   },
   {
@@ -65,17 +68,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define Plotting Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%R\n",
-    "peak_data<-data.frame(read.csv(paste0(sim_wd,\"/\",\"pattern_0/peak_0/data.csv\")))\n",
-    "par(mfrow=c(10,1)) \n",
-    "par(mar=c(2,1,1,1))\n",
-    "for (i in 0:9) {\n",
-    "    hist(subset(peak_data,modification==i)$position, xlim=c(0,2150), ylim = c(0, 40), breaks=200, main=paste0(\"Modification: \",i ))\n",
+    "plot_pattern <- function(data, col_palette) {\n",
+    "    acum <- matrix(0, nrow=10,ncol=10)\n",
+    "    colour_idx <- 1\n",
+    "    colour_vec <- matrix(rep(0,10))\n",
+    "    for (pattern in data){\n",
+    "        p <-matrix(pattern)\n",
+    "        acum <- acum + (p %*% t(p))*colour_idx\n",
+    "        colour_vec <- colour_vec+p*colour_idx\n",
+    "        colour_idx<-colour_idx+1\n",
+    "    }\n",
+    "    plt<-c()\n",
+    "    plt$mat <- (ggplot(data = melt(acum), aes((11-Var1), Var2, fill=factor(value)))+\n",
+    "    geom_tile()+\n",
+    "    scale_x_continuous(\"modification\", breaks=c(0:10)+0.5)+\n",
+    "    scale_y_continuous(\"modification\", breaks=c(0:10)+0.5)+\n",
+    "    scale_fill_manual(values=col_palette, labels = c(\"None\", c(1:10)))+\n",
+    "    guides(fill=guide_legend(title=\"Association\",title.position = \"left\"))+\n",
+    "    coord_fixed() +\n",
+    "    theme(\n",
+    "        panel.grid.major = element_line(colour = \"black\"),\n",
+    "        legend.title = element_text(angle=90,hjust=0.5),\n",
+    "        legend.key.height = grid::unit(5,\"cm\"),\n",
+    "        legend.key.width = grid::unit(1.75,\"cm\"),\n",
+    "        legend.margin = grid::unit(0.25,\"cm\"),\n",
+    "        legend.box = \"vertical\",\n",
+    "        legend.box.margin = margin(c(10,10,10,10)),\n",
+    "        panel.background = element_rect(fill = NA),\n",
+    "        panel.ontop = TRUE,\n",
+    "        axis.text.x=element_blank(),\n",
+    "        axis.text.y=element_blank(),\n",
+    "        axis.ticks=element_line(size=0.4),\n",
+    "        panel.border=element_blank())\n",
+    "    )\n",
+    "    plt$colours <- colour_vec\n",
+    "    return(plt)\n",
+    "}\n",
+    "\n",
+    "g_legend<-function(a.gplot){\n",
+    "    tmp <- ggplot_gtable(ggplot_build(a.gplot))\n",
+    "    leg <- which(sapply(tmp$grobs, function(x) x$name) == \"guide-box\")\n",
+    "    legend <- tmp$grobs[[leg]]                        \n",
+    "    return(legend)\n",
+    "}\n",
+    "                        \n",
+    "plot_association <- function(patt_no, patterns, palette) {\n",
+    "    \n",
+    "    plts <- list()\n",
+    "    \n",
+    "    patt_name <- paste0(\"pattern_\",patt_no)\n",
+    "    peak_data <-data.frame(read.csv(paste0(sim_wd,\"/\",patt_name,\"/\",\"/peak_0/data.csv\")))\n",
+    "    layout_mat <- matrix(0, nrow=10,ncol=3)\n",
+    "    layout_mat[,1] <- rep(1,10)\n",
+    "    layout_mat[,2] <- rep(2,10)\n",
+    "    layout_mat[,3] <- c(3:12)\n",
+    "\n",
+    "    patt_plt <- plot_pattern(patterns[[patt_no+1]], cbbPalette)\n",
+    "    colours <- patt_plt$colours\n",
+    "    \n",
+    "    mat_plt <-patt_plt$mat\n",
+    "    \n",
+    "    legend <- g_legend(mat_plt)\n",
+    "    plts[[1]] <- legend\n",
+    "    plts[[2]] <- mat_plt+theme(legend.position=\"none\")\n",
+    "    \n",
+    "    for (i in 0:9) {\n",
+    "        p <- (ggplot(subset(peak_data,modification==i), aes(x=position))+\n",
+    "                geom_histogram(colour=\"white\", fill=cbbPalette[colours[i+1]+1],bins=150)+\n",
+    "                xlim(c(0,2200)) +\n",
+    "                ylim(c(0,20)))\n",
+    "        plts[[i+3]] <- p\n",
+    "    }\n",
+    "    pdf(paste0(\"association_pattern_\",patt_no,\".pdf\"), width=31,height=15)\n",
+    "        grid.arrange(grobs=plts,\n",
+    "                     layout_matrix=layout_mat, widths=c(2,15,14))\n",
+    "        grid.rect(gp=gpar(fill=NA))\n",
+    "    dev.off()\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Patterns for Peak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "patterns <- fromJSON(file=paste0(sim_wd, \"/\",\"patterns.json\"))\n",
+    "for(i in c(0:3)) {\n",
+    "    plot_association(i, patterns, cbbPalette)\n",
     "}"
    ]
   },
