--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -34,6 +34,7 @@
     "library(cluster) \n",
     "library(factoextra)\n",
     "library(NbClust)\n",
+    "library(rjson)\n",
     "\n",
     "library(gridExtra)\n",
     "library(grid)\n",
