--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -203,24 +203,72 @@
     "    return(b)\n",
     "}\n",
     "\n",
-    "get_evecs <- function(x) {\n",
+    "make_L <- function(x) {\n",
     "    b <- matrix(0, 10, 10)\n",
-    "    b[lower.tri(b, diag=FALSE)] <- (x/sqrt(sum(x^2)))\n",
+    "    b[lower.tri(b, diag=FALSE)] <- x\n",
     "    b <- t(b)\n",
     "    b <- (b+t(b))\n",
-    "    b <- b\n",
     "    deg <- colSums(b)\n",
     "    d <- matrix(0, 10, 10)\n",
     "    diag(d) <- deg\n",
     "    L <- d-b\n",
     "    L <- sqrt(diag(1/deg)) %*% L %*% sqrt(diag(1/deg))\n",
+    "    return(L)\n",
+    "}\n",
+    "\n",
+    "get_evecs <- function(x) {\n",
+    "    L <- make_L(x)\n",
     "    e <- eigen(L)\n",
     "    vv <- c()\n",
     "    for (i in 1:9){\n",
     "        vv <- c(vv,e$vectors[,i]*e$values[i])\n",
     "    }\n",
     "    return(e$vectors[,1])\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "###jaccard\n",
+    "dist_jacc <- function(df){\n",
+    "    dd <- as.matrix(df)\n",
+    "    o_prod <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(jacc))\n",
+    "    return(o_prod)\n",
+    "}\n",
+    "\n",
+    "jacc <- function(vec1,vec2) {\n",
+    "    m <- sum(abs(vec1-vec2))\n",
+    "    A <- make_mat(vec1) + make_mat(vec2)\n",
+    "    n <- nuclear_norm(A)\n",
+    "    return (m/n)\n",
+    "}\n",
+    "\n",
+    "nuclear_norm <- function(A) {\n",
+    "    return(sum(diag(sqrt(A %*% t(A)))))\n",
+    "}\n",
+    "\n",
+    "\n",
+    "###hamming\n",
+    "dist_hamm <- function(df){\n",
+    "    dist_mat <- dist(exp_df[,2:46], method=\"manhattan\")\n",
+    "    dist_mat <- (1/(9*10))*dist_mat\n",
+    "    return(dist_mat)\n",
+    "}\n",
+    "\n",
+    "###hamming ipsen-mikhailovich\n",
+    "dist_him <- function(df){\n",
+    "    dd <- as.matrix(df)\n",
+    "    hm <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(jacc))\n",
+    "    im <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(him))\n",
+    "    return(sqrt(0.2*hm^2+im^2))\n",
+    "}\n",
+    "\n",
+    "him <- function(vec1, vec2){\n",
+    "    A<- make_L(vec1)\n",
+    "    B<- make_L(vec2)\n",
+    "    ea <- eigen(A)$values\n",
+    "    eb <- eigen(B)$values\n",
+    "    \n",
+    "    diff <- sqrt(sum((sqrt(ea)-sqrt(eb))^2))\n",
+    "    return(diff)\n",
+    "}"
    ]
   },
   {
@@ -266,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot PCA Projections"
+    "### Plot MDS Projections"
    ]
   },
   {
@@ -276,10 +324,22 @@
    "outputs": [],
    "source": [
     "%%R\n",
-    "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
     "\n",
-    "par(mfrow=c(3,2)) \n",
-    "par(mar=c(1,1,1,1))\n",
+    "mds_plot <- function(dists, name) {  \n",
+    "    ### Compute MDS\n",
+    "    cmds.df <- as.data.frame(cmdscale(dists))\n",
+    "    cmds.df$patterns <- exp_df$pattern\n",
+    "    ### Plot MDS\n",
+    "    \n",
+    "    plt<- ggplot(cmds.df, aes(V1, V2)) +\n",
+    "        geom_point(shape=23, aes(fill = factor(patterns)), color=\"darkred\", size=3)+\n",
+    "        labs(fill = \"Pattern\") +\n",
+    "        scale_colour_discrete(name = \"groups\") +\n",
+    "        ggtitle(paste0(\"MDS Projection of \",name))\n",
+    "    return(plt)\n",
+    "}\n",
+    "\n",
+    "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
     "\n",
     "for (replica in replicas){\n",
     "    exp_df <- data.frame()\n",
@@ -290,13 +350,19 @@
     "        dists$pattern <- pattern_name\n",
     "        exp_df <- rbind(exp_df, dists)\n",
     "    }\n",
-    "    pca <- prcomp(exp_df[,2:46], scale = FALSE)\n",
+    "    \n",
     "    patterns <- factor(exp_df$pattern)\n",
-    "    plt <- autoplot(pca) +\n",
-    "        geom_point(shape=23, aes(fill = patterns), color=\"darkred\", size=3) +\n",
-    "        labs(fill = \"Pattern\") +\n",
-    "        ggtitle(basename(replica))\n",
-    "    plot(plt)\n",
+    "\n",
+    "    ### Compute Jaccard distance\n",
+    "    jacc_d <- dist_jacc(exp_df[,2:46])\n",
+    "    ### Compute Hamming distance\n",
+    "    hamm_d <- dist_hamm(exp_df[,2:46])\n",
+    "    ### Compute Hamming Ipsen-Mikhailovich distance\n",
+    "    him_d <- dist_him(exp_df[,2:46])\n",
+    "    \n",
+    "    plot(mds_plot(jacc_d, paste0(\"Jaccard Distance for \", basename(replica))))\n",
+    "    plot(mds_plot(hamm_d, paste0(\"Hamming Distance for \", basename(replica))))\n",
+    "    plot(mds_plot(him_d, paste0(\"Hamming IM Distance for \", basename(replica))))\n",
     "}"
    ]
   }
