cleaned up dependencies
WIP on data analysis

--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -58,7 +58,8 @@
     "%%R\n",
     "exp_wd <- \"./Experiment_out/test2\"\n",
     "sim_wd <- \"./Simulation_result/test2/Experiment_test2_1\"\n",
-    "cbbPalette <- c(\"#EEEEEE\", \"#E69F00\", \"#56B4E9\", \"#009E73\", \"#F0E442\", \"#0072B2\", \"#D55E00\", \"#CC79A7\")"
+    "cbbPalette <- c(\"#EEEEEE\", \"#E69F00\", \"#56B4E9\", \"#009E73\", \"#F0E442\", \"#0072B2\", \"#D55E00\", \"#CC79A7\")\n",
+    "cbbPalette_reduced <- cbbPalette[2:length(cbbPalette)]"
    ]
   },
   {
@@ -268,45 +269,12 @@
     "    \n",
     "    diff <- sqrt(sum((sqrt(ea)-sqrt(eb))^2))\n",
     "    return(diff)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plot Eigen-Projections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%R\n",
-    "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
+    "}\n",
     "\n",
-    "par(mfrow=c(3,2)) \n",
-    "par(mar=c(1,1,1,1))\n",
-    "\n",
-    "for (replica in replicas){\n",
-    "    exp_df <- data.frame()\n",
-    "    patterns <- list.dirs(path = replica, full.names = TRUE, recursive = FALSE)\n",
-    "    for (pattern in patterns){\n",
-    "        pattern_name <- basename(pattern)\n",
-    "        dists <- data.frame(read.csv(file=paste0(pattern, '/', 'MMD_dists.csv'), header=TRUE, sep=\",\"))\n",
-    "        dists$pattern <- pattern_name\n",
-    "        exp_df <- rbind(exp_df, dists)\n",
-    "    }\n",
+    "###Eigen-Vector distance\n",
+    "dist_ev <- function(df){\n",
     "    evecs <- apply((exp_df[,2:46]),1,get_evecs)\n",
-    "    pca <- prcomp(t(evecs), scale = FALSE)\n",
-    "    patterns <- factor(exp_df$pattern)\n",
-    "    plt <- autoplot(pca) +\n",
-    "        geom_point(shape=23, aes(fill = patterns), color = \"darkred\", size=3) +\n",
-    "        labs(fill = \"Pattern\") +\n",
-    "        ggtitle(basename(replica))\n",
-    "    plot(plt)\n",
+    "    return(dist(t(evecs)))\n",
     "}"
    ]
   },
@@ -325,21 +293,27 @@
    "source": [
     "%%R\n",
     "\n",
-    "mds_plot <- function(dists, name) {  \n",
+    "mds_plot <- function(dists, name, palette) {  \n",
     "    ### Compute MDS\n",
     "    cmds.df <- as.data.frame(cmdscale(dists))\n",
     "    cmds.df$patterns <- exp_df$pattern\n",
     "    ### Plot MDS\n",
     "    \n",
     "    plt<- ggplot(cmds.df, aes(V1, V2)) +\n",
-    "        geom_point(shape=23, aes(fill = factor(patterns)), color=\"darkred\", size=3)+\n",
+    "        geom_point(shape=23, aes(fill = factor(patterns)), color=\"white\", size=3)+\n",
     "        labs(fill = \"Pattern\") +\n",
-    "        scale_colour_discrete(name = \"groups\") +\n",
-    "        ggtitle(paste0(\"MDS Projection of \",name))\n",
+    "        scale_fill_manual(values = palette, name = \"groups\") +\n",
+    "        ggtitle(paste0(\"MDS Projection of \",name)) +\n",
+    "        theme(aspect.ratio=1,\n",
+    "              plot.title = element_text(size = 4, face = \"bold\")) +\n",
     "    return(plt)\n",
     "}\n",
     "\n",
     "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
+    "n_replicas<-length(replicas)\n",
+    "\n",
+    "plts <- list()\n",
+    "index <- 1\n",
     "\n",
     "for (replica in replicas){\n",
     "    exp_df <- data.frame()\n",
@@ -359,10 +333,23 @@
     "    hamm_d <- dist_hamm(exp_df[,2:46])\n",
     "    ### Compute Hamming Ipsen-Mikhailovich distance\n",
     "    him_d <- dist_him(exp_df[,2:46])\n",
+    "    ### Compute eig-v distance\n",
+    "    ev_d <- dist_ev(exp_df[,2:46])\n",
     "    \n",
-    "    plot(mds_plot(jacc_d, paste0(\"Jaccard Distance for \", basename(replica))))\n",
-    "    plot(mds_plot(hamm_d, paste0(\"Hamming Distance for \", basename(replica))))\n",
-    "    plot(mds_plot(him_d, paste0(\"Hamming IM Distance for \", basename(replica))))\n",
+    "    plts[[index*5 + 1]] <- textGrob(paste0(\"Replica: \", basename(replica)), rot=90)\n",
+    "    plts[[index*5 + 2]] <- mds_plot(jacc_d, \"Jaccard Distance\", palette = cbbPalette[2:length(cbbPalette_reduced)])\n",
+    "    plts[[index*5 + 3]] <- mds_plot(hamm_d, \"Hamming Distance\", palette = cbbPalette[2:length(cbbPalette_reduced)])\n",
+    "    plts[[index*5 + 4]] <- mds_plot(him_d, \"Hamming IM Distance\", palette = cbbPalette[2:length(cbbPalette_reduced)])\n",
+    "    plts[[index*5 + 5]] <- mds_plot(ev_d, \"Eigen Vector Distance\", palette = cbbPalette[2:length(cbbPalette_reduced)])\n",
+    "    index<-index+1\n",
+    "    \n",
+    "    pdf(paste0(\"MDS_projections.pdf\"), width=4*5+1,height=5*n_replicas)\n",
+    "    grid.arrange(grobs=plts,\n",
+    "            nrow=2,\n",
+    "            ncol=5,\n",
+    "            widths=c(1, rep(5,4)))\n",
+    "    grid.rect(gp=gpar(fill=NA))\n",
+    "    dev.off()\n",
     "}"
    ]
   }
