--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -150,7 +150,7 @@
     "    for (i in 0:9) {\n",
     "        p <- (ggplot(subset(peak_data,modification==i), aes(x=position))+\n",
     "                geom_histogram(colour=\"white\", fill=cbbPalette[colours[i+1]+1],bins=150)+\n",
-    "                xlim(c(0,2200)) +\n",
+    "                xlim(c(0,2100)) +\n",
     "                ylim(c(0,20)))\n",
     "        plts[[i+3]] <- p\n",
     "    }\n",
@@ -256,7 +256,7 @@
     "###hamming ipsen-mikhailovich\n",
     "dist_him <- function(df){\n",
     "    dd <- as.matrix(df)\n",
-    "    hm <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(jacc))\n",
+    "    hm <- (1/(9*10))*outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(hm))\n",
     "    im <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(him))\n",
     "    return(sqrt(0.2*hm^2+im^2))\n",
     "}\n",
@@ -269,6 +269,11 @@
     "    \n",
     "    diff <- sqrt(sum((sqrt(abs(ea))-sqrt(abs(eb)))^2))\n",
     "    return(diff)\n",
+    "}\n",
+    "\n",
+    "hm <- function(vec1,vec2) {\n",
+    "    m <- sum(abs(vec1-vec2))\n",
+    "    return (m)\n",
     "}\n",
     "\n",
     "###Eigen-Vector distance\n",
