--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -256,7 +256,7 @@
     "###hamming ipsen-mikhailovich\n",
     "dist_him <- function(df){\n",
     "    dd <- as.matrix(df)\n",
-    "    hm <- (1/(9*10))*outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(hm))\n",
+    "    hm <- (1/(9*10))*outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(ham))\n",
     "    im <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(him))\n",
     "    return(sqrt(0.2*hm^2+im^2))\n",
     "}\n",
@@ -271,7 +271,7 @@
     "    return(diff)\n",
     "}\n",
     "\n",
-    "hm <- function(vec1,vec2) {\n",
+    "ham <- function(vec1,vec2) {\n",
     "    m <- sum(abs(vec1-vec2))\n",
     "    return (m)\n",
     "}\n",
