Added hierarchical clustering plots

--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -39,7 +39,12 @@
     "library(gridExtra)\n",
     "library(grid)\n",
     "library(ggplot2)\n",
-    "library(ggfortify)"
+    "library(ggfortify)\n",
+    "library(ggdendro)\n",
+    "library(dendextend)\n",
+    "library(mclust)\n",
+    "\n",
+    "library(magrittr)"
    ]
   },
   {
@@ -58,7 +63,7 @@
     "%%R\n",
     "exp_wd <- \"./Experiment_out/test2\"\n",
     "sim_wd <- \"./Simulation_result/test2/Experiment_test2_1\"\n",
-    "cbbPalette <- c(\"#EEEEEE\", \"#E69F00\", \"#56B4E9\", \"#009E73\", \"#F0E442\", \"#0072B2\", \"#D55E00\", \"#CC79A7\")\n",
+    "cbbPalette <- c(\"#EEEEEE\", \"#1B9E77\", \"#D95F02\", \"#7570B3\", \"#E7298A\", \"#66A61E\", \"#E6AB02\", \"#A6761D\", \"#666666\")\n",
     "cbbPalette_reduced <- cbbPalette[2:length(cbbPalette)]"
    ]
   },
@@ -287,6 +292,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Plot Hierarchical Clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "clus_plot <- function(hc, g_truth, name, palette) {\n",
+    "    \n",
+    "    col_vec <- as.integer(factor(g_truth))\n",
+    "    \n",
+    "    dend <- as.dendrogram(hc) %>% \n",
+    "            set(\"branches_k_color\", k=4) %>%\n",
+    "            set(\"branches_lwd\", 0.7)\n",
+    "    \n",
+    "    col_vec <- col_vec[as.integer(labels(dend))]    \n",
+    "    ggd1 <- as.ggdend(dend)\n",
+    "    \n",
+    "    clusters <- as.vector(cutree(hc, 4))\n",
+    "    performance <- adjustedRandIndex(clusters, g_truth)\n",
+    "    \n",
+    "    y_scale <- max(ggd1$segments$y)/10\n",
+    "                      \n",
+    "    plt <- ggplot() +\n",
+    "            geom_segment(data = ggd1$segments, aes(x = x, y = y/y_scale, xend = xend, yend = yend/y_scale, color=factor(col))) +\n",
+    "            geom_tile(data = ggd1$labels, aes(x=x, y=(y-1), fill=factor(col_vec))) +\n",
+    "            scale_colour_manual(values=cbbPalette_reduced[5:11], name=\"Clustering Assignment\", na.value=\"black\") +\n",
+    "            scale_fill_manual(values=cbbPalette_reduced, name=\"Ground Truth\") +\n",
+    "            scale_y_reverse(expand = c(0, 0)) +\n",
+    "            coord_polar(theta=\"x\")  +\n",
+    "            ggtitle(paste0(\"Hierarchical Clustering: \", name)) +\n",
+    "            annotate(\"text\",x=0,y=-2, label=paste0(\"ARI: \", performance), size=6)+\n",
+    "            theme(aspect.ratio = 1,\n",
+    "                    axis.line.y=element_blank(),\n",
+    "                    axis.ticks.y=element_blank(),\n",
+    "                    axis.text.y=element_blank(),\n",
+    "                    axis.title.y=element_blank(),\n",
+    "                    axis.line.x=element_blank(),\n",
+    "                    axis.ticks.x=element_blank(),\n",
+    "                    axis.text.x=element_blank(),\n",
+    "                    axis.title.x=element_blank(),\n",
+    "                    panel.grid  = element_blank(),\n",
+    "                    panel.border = element_blank(),\n",
+    "                    plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"),\n",
+    "                    legend.position=\"none\")\n",
+    "    return(plt)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R \n",
+    "replicas <- list.dirs(path = exp_wd, full.names = TRUE, recursive = FALSE)\n",
+    "n_replicas <- length(replicas)\n",
+    "n_plots <- 4\n",
+    "\n",
+    "data_grid <-list()\n",
+    "name_grid <-list()\n",
+    "replica_names <-list()\n",
+    "\n",
+    "index <- 1;\n",
+    "\n",
+    "for (replica in replicas){\n",
+    "    \n",
+    "    exp_df <- data.frame()\n",
+    "    patterns <- list.dirs(path = replica, full.names = TRUE, recursive = FALSE)\n",
+    "    \n",
+    "    for (pattern in patterns){\n",
+    "        pattern_name <- basename(pattern)\n",
+    "        dists <- data.frame(read.csv(file=paste0(pattern, '/', 'MMD_dists.csv'), header=TRUE, sep=\",\"))\n",
+    "        dists$pattern <- pattern_name\n",
+    "        exp_df <- rbind(exp_df, dists)\n",
+    "    }\n",
+    "    \n",
+    "    ### Compute Jaccard distance\n",
+    "    jacc_d <- as.dist(dist_jacc(exp_df[,2:46]))\n",
+    "    ### Compute Hamming distance\n",
+    "    hamm_d <- as.dist(dist_hamm(exp_df[,2:46]))\n",
+    "    \n",
+    "    replica_list <- list(hclust(jacc_d, method = \"ward.D2\"),\n",
+    "                         hclust(jacc_d, method = \"complete\"),\n",
+    "                         hclust(hamm_d, method = \"ward.D2\"),\n",
+    "                         hclust(hamm_d, method = \"complete\"))\n",
+    "    name_list <- list(\"Jaccard/Ward\", \"Jaccard/Complete\", \"Hamming/Ward\", \"Hamming/Complete\")\n",
+    "    \n",
+    "    data_grid[[index]] <- replica_list\n",
+    "    name_grid[[index]] <- name_list\n",
+    "    replica_names[[index]] <- paste0(\"Replica: \", basename(replica))\n",
+    "    \n",
+    "    index <- index+1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "pl_grid <- list()\n",
+    "for (i in c(1:n_replicas)){\n",
+    "    \n",
+    "    offset <- (i-1)*(n_plots+1)\n",
+    "    \n",
+    "    pl_grid[[offset + 1]] <- textGrob(replica_names[[i]], rot=90)\n",
+    "    \n",
+    "    for (j in c(1:n_plots)){\n",
+    "        pl_grid[[offset + (1+j)]] <- clus_plot(data_grid[[i]][[j]],exp_df$pattern, name_grid[[i]][[j]], cbbPalette_reduced)\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pdf(paste0(\"Clustering.pdf\"), width=n_plots*5+1,height=5*n_replicas)\n",
+    "grid.arrange(grobs=pl_grid,\n",
+    "            nrow=n_replicas,\n",
+    "            ncol=(n_plots+1),\n",
+    "            widths=c(1,rep(5,n_plots)))\n",
+    "grid.rect(gp=gpar(fill=NA))\n",
+    "dev.off()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plot MDS Projections"
    ]
   },
@@ -383,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
