--- a/Experiment_NB/Data Analysis.ipynb
+++ b/Experiment_NB/Data Analysis.ipynb
@@ -209,29 +209,6 @@
     "    return(b)\n",
     "}\n",
     "\n",
-    "make_L <- function(x) {\n",
-    "    b <- matrix(0, 10, 10)\n",
-    "    b[lower.tri(b, diag=FALSE)] <- x\n",
-    "    b <- t(b)\n",
-    "    b <- (b+t(b))\n",
-    "    deg <- colSums(b)\n",
-    "    d <- matrix(0, 10, 10)\n",
-    "    diag(d) <- deg\n",
-    "    L <- d-b\n",
-    "    L <- sqrt(diag(1/deg)) %*% L %*% sqrt(diag(1/deg))\n",
-    "    return(L)\n",
-    "}\n",
-    "\n",
-    "get_evecs <- function(x) {\n",
-    "    L <- make_L(x)\n",
-    "    e <- eigen(L)\n",
-    "    vv <- c()\n",
-    "    for (i in 1:9){\n",
-    "        vv <- c(vv,e$vectors[,i]*e$values[i])\n",
-    "    }\n",
-    "    return(e$vectors[,1])\n",
-    "}\n",
-    "\n",
     "###jaccard\n",
     "dist_jacc <- function(df){\n",
     "    dd <- as.matrix(df)\n",
@@ -250,41 +227,11 @@
     "    return(sum(diag(sqrt(A %*% t(A)))))\n",
     "}\n",
     "\n",
-    "\n",
     "###hamming\n",
     "dist_hamm <- function(df){\n",
     "    dist_mat <- dist(exp_df[,2:46], method=\"manhattan\")\n",
     "    dist_mat <- (1/(9*10))*dist_mat\n",
     "    return(dist_mat)\n",
-    "}\n",
-    "\n",
-    "###hamming ipsen-mikhailovich\n",
-    "dist_him <- function(df){\n",
-    "    dd <- as.matrix(df)\n",
-    "    hm <- (1/(9*10))*outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(ham))\n",
-    "    im <- outer(split(dd, row(dd)), split(dd, row(dd)), FUN=Vectorize(him))\n",
-    "    return(sqrt(0.2*hm^2+im^2))\n",
-    "}\n",
-    "\n",
-    "him <- function(vec1, vec2){\n",
-    "    A<- make_L(vec1)\n",
-    "    B<- make_L(vec2)\n",
-    "    ea <- eigen(A)$values\n",
-    "    eb <- eigen(B)$values\n",
-    "    \n",
-    "    diff <- sqrt(sum((sqrt(abs(ea))-sqrt(abs(eb)))^2))\n",
-    "    return(diff)\n",
-    "}\n",
-    "\n",
-    "ham <- function(vec1,vec2) {\n",
-    "    m <- sum(abs(vec1-vec2))\n",
-    "    return (m)\n",
-    "}\n",
-    "\n",
-    "###Eigen-Vector distance\n",
-    "dist_ev <- function(df){\n",
-    "    evecs <- apply((exp_df[,2:46]),1,get_evecs)\n",
-    "    return(dist(t(evecs)))\n",
     "}"
    ]
   },
@@ -297,9 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%R` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "clus_plot <- function(hc, g_truth, name, palette) {\n",
@@ -326,7 +281,7 @@
     "            scale_y_reverse(expand = c(0, 0)) +\n",
     "            coord_polar(theta=\"x\")  +\n",
     "            ggtitle(paste0(\"Hierarchical Clustering: \", name)) +\n",
-    "            annotate(\"text\",x=0,y=-2, label=paste0(\"ARI: \", performance), size=6)+\n",
+    "            annotate(\"text\",x=0,y=-2.5, label=paste0(\"ARI: \", performance), size=6)+\n",
     "            theme(aspect.ratio = 1,\n",
     "                    axis.line.y=element_blank(),\n",
     "                    axis.ticks.y=element_blank(),\n",
@@ -473,31 +428,23 @@
     "    jacc_d <- dist_jacc(exp_df[,2:46])\n",
     "    ### Compute Hamming distance\n",
     "    hamm_d <- dist_hamm(exp_df[,2:46])\n",
-    "    ### Compute Hamming Ipsen-Mikhailovich distance\n",
-    "    him_d <- dist_him(exp_df[,2:46])\n",
-    "    ### Compute eig-v distance\n",
-    "    ev_d <- dist_ev(exp_df[,2:46])\n",
     "        \n",
     "    pl[[1]] <- mds_plot(jacc_d, exp_df$pattern, \"Jaccard Distance\", palette = cbbPalette_reduced)\n",
     "    pl[[2]] <- mds_plot(hamm_d, exp_df$pattern, \"Hamming Distance\", palette = cbbPalette_reduced)\n",
-    "    pl[[3]] <- mds_plot(him_d, exp_df$pattern, \"Hamming IM Distance\", palette = cbbPalette_reduced)\n",
-    "    pl[[4]] <- mds_plot(ev_d, exp_df$pattern, \"Eigen Vector Distance\", palette = cbbPalette_reduced)\n",
     "    \n",
-    "    pl_grid[[index*6 + 1]] <- textGrob(paste0(\"Replica: \", basename(replica)), rot=90)\n",
-    "    pl_grid[[index*6 + 2]] <- g_legend(pl[[1]])\n",
-    "    pl_grid[[index*6 + 3]] <- pl[[1]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
-    "    pl_grid[[index*6 + 4]] <- pl[[2]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
-    "    pl_grid[[index*6 + 5]] <- pl[[3]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
-    "    pl_grid[[index*6 + 6]] <- pl[[4]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
+    "    pl_grid[[index*4 + 1]] <- textGrob(paste0(\"Replica: \", basename(replica)), rot=90)\n",
+    "    pl_grid[[index*4 + 2]] <- g_legend(pl[[1]])\n",
+    "    pl_grid[[index*4 + 3]] <- pl[[1]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
+    "    pl_grid[[index*4 + 4]] <- pl[[2]]+theme(legend.position=\"none\", aspect.ratio = 1, plot.title = element_text(size = 8, hjust = 0.5, face = \"bold\"))\n",
     "    \n",
     "    index <- index+1\n",
     "}\n",
     "\n",
-    "pdf(paste0(\"Projections.pdf\"), width=4*5+2,height=5*n_replicas)\n",
+    "pdf(paste0(\"Projections.pdf\"), width=2*5+2,height=5*n_replicas)\n",
     "grid.arrange(grobs=pl_grid,\n",
     "            nrow=n_replicas,\n",
-    "            ncol=6,\n",
-    "            widths=c(1,1,rep(5,4)))\n",
+    "            ncol=4,\n",
+    "            widths=c(1,1,rep(5,2)))\n",
     "grid.rect(gp=gpar(fill=NA))\n",
     "dev.off()\n",
     "print(pl_grid)"
